Added `POST /bootstrap` to quickly setup all signing material needed
Change-type: minor
